<resources>
    <string name="app_name">Chat</string>
    <string name="message">Mensaje</string>
    <string name="send_button">Send Button</string>
    <string name="send_symbol"><![CDATA[>]]></string>
    <string name="usuario">Usuario</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="reg_strate">Regístrate</string>
    <string name="registro">Registro</string>
    <string name="repetir_contrase_a">Repetir contraseña</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="recu_rdame">Recuérdame</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="anadir_contacto">Añadir contacto</string>
    <string name="nuevo_grupo">Nuevo grupo</string>
    <string name="crear_grupo">Crear grupo</string>
    <string name="nombre_del_grupo">Nombre del grupo</string>
    <string name="elegir_usuario">Añadir usuario</string>
    <string name="a_adir">Añadir</string>
    <string name="foto_del_grupo">Foto del grupo</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="cargando">Cargando…</string>
    <string name="usuarios_en_l_nea">Usuarios en línea</string>
    <string name="atr_s">Atrás</string>
    <string name="indicador_de_estado_de_usuario">Indicador de estado de usuario</string>
    <string name="backtohomescreenbutton">Botón para volver a la pantalla de inicio</string>
    <string name="mensajes_enviados">Mensajes enviados</string>
    <string name="participantes">Participantes</string>
    <string name="opciones">Opciones</string>
    <string name="hacer_administrador">Hacer administrador</string>
    <string name="eliminar_administrador">Eliminar administrador</string>
    <string name="expulsar_del_chat_grupal">Expulsar del grupo</string>
    <string name="ver_informacion_de_usuario">Ver informacion de usuario</string>
    <string name="a_adir_miembro">Añadir miembro</string>
    <string name="abandonar_grupo">Abandonar grupo</string>
    <string name="elige_un_contacto">Elige un contacto</string>
    <string name="cancelar">Cancelar</string>
    <string name="search_message_button">Botón para buscar mensajes</string>
    <string name="texto_a_buscar">Texto a buscar</string>
    <string name="btnUp">Botón para ir a la siguiente instancia encontrada de la búsqueda</string>
    <string name="btnDown">Botón para ir a la anterior instancia encontrada de la búsqueda</string>
    <string name="borrar_mensaje">Borrar mensaje</string>
    <string name="eliminar_contacto">Eliminar contacto</string>
    <string name="tu_perfil">Tu Perfil</string>
    <string name="user_id">Id: %s</string>
</resources>