<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.auth.SignUpFragment"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp">

    <TextView
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginBottom="60dp" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/usuario"
            android:layout_marginBottom="30dp"
            android:id="@+id/etUsername"
            android:textColorHint="#546E7A" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:inputType="textPassword"
            android:hint="@string/contrase_a"
            android:layout_marginBottom="30dp"
            android:id="@+id/etSigInPwd1"
            android:textColorHint="#546E7A" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:inputType="textPassword"
            android:layout_marginBottom="30dp"
            android:hint="@string/repetir_contrase_a"
            android:id="@+id/etSigInPwd2"
            android:textColorHint="#546E7A" />

    <Button
            android:text="@string/crear_cuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSignIn"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:layout_marginBottom="30dp" />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:text="@string/ya_tienes_cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logInSubTitle"
                android:textAlignment="center"
                android:textSize="16sp" />

        <TextView
                android:layout_marginStart="10sp"
                android:text="@string/iniciar_sesi_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LogInRedirect"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="@color/md_theme_dark_accent"
                android:textAllCaps="false"
                android:focusable="true"
                android:clickable="true"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

</LinearLayout>