<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.home.AddGroupFragment"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="50dp"
        android:descendantFocusability="blocksDescendants">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuevo_grupo"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginBottom="30dp" />

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/foto_del_grupo"
            android:src="@drawable/default_group_large"
            android:layout_marginBottom="30dp" />


    <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/nombre_del_grupo"
            android:id="@+id/etGroupName"
            android:textColorHint="#546E7A"
            android:layout_marginBottom="30dp" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crear_grupo"
            android:id="@+id/btnCreateGroup"
            android:layout_marginTop="10dp"
            android:layout_weight="0"/>

</LinearLayout>