<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.main.LogInFragment"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp">

    <TextView
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesi_n"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginBottom="60dp" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints=""
            android:inputType="text"
            android:hint="@string/usuario"
            android:layout_marginBottom="30dp"
            android:id="@+id/etUsername"
            android:textColorHint="#546E7A"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:inputType="textPassword"
            android:hint="@string/contrase_a"
            android:id="@+id/etPwd"
            android:textColorHint="#546E7A" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="30dp">

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recu_rdame"
                android:layout_weight="1"
                android:id="@+id/ckbxRememberMe"/>

        <Button
                android:text="@string/iniciar_sesi_n"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnLogin"
                tools:ignore="DuplicateSpeakableTextCheck"
                android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:text="@string/no_tienes_cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logInSubTitle"
                android:textAlignment="center"
                android:textSize="16sp" />

        <TextView
                android:layout_marginStart="10sp"
                android:focusable="true"
                android:text="@string/reg_strate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sigInRedirect"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:clickable="true"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck"
                android:textColor="@color/md_theme_dark_accent"/>
    </LinearLayout>
</LinearLayout>