<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ChatActivity"
        android:orientation="vertical"
        android:padding="25dp">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

        <EditText
                android:id="@+id/etMensaje"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:hint="@string/message"
                android:inputType="text"
                android:autofillHints=""
                android:layout_weight="1"
                android:textColorHint="#546E7A"
                tools:ignore="VisualLintTextFieldSize" />

        <Button
                android:id="@+id/sendText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/send_button"
                android:text="@string/send_symbol"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_weight="0"
                tools:ignore="RedundantDescriptionCheck" />
    </LinearLayout>
</LinearLayout>