<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.home.UserProfileFragment"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center_horizontal">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tu_perfil"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp" />

    <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp"
            app:cardBackgroundColor="@color/md_theme_dark_surface">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/foto_de_perfil"
                android:src="@drawable/camera"
                android:id="@+id/ivUserPfp"
                android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:id="@+id/tvUsername" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:text="@string/user_id"
            android:id="@+id/tvUserId" />

</LinearLayout>