<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.chat.ChatMessagesFragment"
        android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:layout_weight="0">

        <EditText
                android:id="@+id/etMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:maxHeight="150dp"
                android:hint="@string/message"
                android:inputType="textMultiLine"
                android:autofillHints=""
                android:textColorHint="#546E7A"
                tools:ignore="VisualLintTextFieldSize"
                android:layout_marginEnd="10dp"
                android:maxLines="5"
                android:minLines="1"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                style="@style/SpecialRoundedEditText" />

        <Button
                android:id="@+id/sendText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:contentDescription="@string/send_button"
                android:text="@string/send_symbol"
                android:textStyle="bold"
                android:textSize="30sp"
                tools:ignore="RedundantDescriptionCheck"
                android:layout_weight="1"
                android:layout_gravity="bottom" />
    </LinearLayout>
</LinearLayout>