<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:layout_weight="0"
        android:elevation="5dp"
        android:descendantFocusability="afterDescendants">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/backtohomescreenbutton"
            android:src="@drawable/left_arrow"
            android:layout_marginEnd="15dp"
            android:id="@+id/btnHome" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/backtohomescreenbutton"
                android:gravity="start|center_vertical"
                android:clipChildren="false"
                android:id="@+id/contactContainter"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:layout_weight="1">

            <FrameLayout
                    android:layout_width="48dp"
                    android:layout_height="48dp">

                <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/indicador_de_estado_de_usuario"
                        android:src="@drawable/disconnected_icon"
                        android:id="@+id/ivOnlineStatus"
                        android:layout_gravity="bottom|end"
                        android:layout_marginEnd="-2dp"
                        android:elevation="3dp" />

                <androidx.cardview.widget.CardView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:cardCornerRadius="24dp"
                        app:cardBackgroundColor="@color/md_theme_dark_surface"
                        android:clickable="true"
                        android:focusable="true">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/foto_de_perfil"
                            android:src="@drawable/default_user"
                            android:id="@+id/ivContactPhoto"
                            android:scaleType="fitCenter" />
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <TextView
                    android:id="@+id/tvContactName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:id="@+id/searchBarContainer"
                android:visibility="gone">

            <EditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/texto_a_buscar"
                    android:inputType="text"
                    android:textSize="14sp"
                    tools:ignore="TouchTargetSizeCheck"
                    android:id="@+id/etSearchText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:imeOptions="actionSearch"/>

            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/btnUp"
                    android:src="@drawable/arrow_up"
                    android:id="@+id/btnUp"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    app:layout_constraintStart_toEndOf="@+id/etSearchText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnDown"
                    app:layout_constraintDimensionRatio="1:1"/>

            <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/btnDown"
                    android:src="@drawable/arrow_down"
                    android:id="@+id/btnDown"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btnUp"
                    app:layout_constraintDimensionRatio="1:1"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="24dp"
                app:cardBackgroundColor="@color/md_theme_dark_onSecondary"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginEnd="20dp"
                app:cardElevation="0dp"
                tools:ignore="TouchTargetSizeCheck">

            <ImageView
                    android:layout_width="40dp"
                    android:contentDescription="@string/search_message_button"
                    android:layout_height="40dp"
                    android:src="@drawable/search_icon"
                    android:layout_weight="0"
                    android:id="@+id/btnSearch"
                    tools:ignore="TouchTargetSizeCheck" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.appcompat.widget.Toolbar>